--- a/charts/lgazelle-ui/templates/deployment.yml
+++ b/charts/lgazelle-ui/templates/deployment.yml
@@ -18,6 +18,6 @@ spec:
           imagePullPolicy: Always
           env:
             - name: LGAZELLE_ENVIRONMENT
-              value: {{ .Values.delphaiEnvironment }}
+              value: {{ .Values.lgazelleEnvironment }}
           ports:
             - containerPort: {{ .Values.httpPort }}
